# mwe_shader_pipeline

./: .gitmodules  CMakeLists.txt  main.cpp
shaders/: simple.vert
src/: main.cpp
